--- a/project.org
+++ b/project.org
@@ -7,8 +7,7 @@
 *** Module settings (alldconf, aosconf, chconf, halconf, mcuconf, )
 ** Extract configuration parameters
 *** DONE Extract simple defines with regex
-***
- TODO Capture !definded() -- default configurations
+*** TODO Capture !definded() -- default configurations
     #+begin_src python
       r"""
       \#if\s(?P<ifdirective>!defined\((?P<flag>[A-Z,\d,_]+)\))\n
@@ -16,8 +15,14 @@
       \#else.*\n\s*#define\s*(?P=SubFlag1)\s*(?P<value2>.*)\n
       \#endif.*
       """
-
     #+end_src
+
+
+* Makefile analyzer
+** Extract all types of compiler flags
+** Extract compile flags content
+** Create configuration database
+** Generate compile/make commands
 
 * Configuration Tester
   Use different configurations to build the OS and capture the result
